syntax = "proto3";

package tech.figure.asset.loan;

option java_multiple_files = true;

import "tech/figure/util/util.proto";
//import "google/protobuf/timestamp.proto";
import "tech/figure/finance/financial_account.proto";
import "validate/validate.proto";

message FundingInstruction {
  string                               id                 = 1 [(validate.rules).string.uuid = true]; // ID of this disbursement
  tech.figure.util.Money               amount             = 2;
  tech.figure.finance.FinancialAccount disburse_account   = 3;
  string                               disbursement_type  = 4; // Description of the disbursement type (e.g. loan funding, refi payoff, referral_fee, etc.)
  string                               fiat_movement_type = 5; // Wire, ACH, etc See FiatMovementType (default to ACH)
}

//// TODO BELOW HERE - THIS IS PROBABLY ALL GONNA CHANGE

//message Funding {
//  bool                        complete             = 1; // All disbursements have been sent
//  google.protobuf.Timestamp   started_date         = 3; // tech.figure.util.Date stablecoin was transferred to borrower redemption address (for first disbursement)
//  google.protobuf.Timestamp   completed_date       = 2; // tech.figure.util.Date stablecoin was burned (for final disbursement)
//  repeated DisbursementRecord disbursement_records = 4;
//  bool                        initiated            = 5; // Funding process has been initiated
//}
//
//message DisbursementRecord {
//  string  disbursement_id   = 1 [(validate.rules).string.uuid = true]; // Reference to the Disbursement object
//  string                redemption_address = 2; // Stablecoin redemption address registered by omnibus
//  bool                  completed          = 3;
//  string  coin_reference_id   = 4 [(validate.rules).string.uuid = true]; // Coin redemption reference id
//  string  bank_account_id   = 5 [(validate.rules).string.uuid = true]; // The omnibus bank account id
//  bool                  initiated          = 6;
//}